kubernetes/platform/envoy-gateway/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https-lake
      protocol: HTTPS
      port: 443
      hostname: "*.lake.dominiksiejak.pl"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-lake-tls
    - name: https-hello
      protocol: HTTPS
      port: 443
      hostname: "*.hello.dominiksiejak.pl"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-hello-tls
